==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

- Improves resiliency of ``COPY FROM`` and ``INSERT FROM SUBQUERY`` statements
  when lot of new partitions will be created on demand.

- Fix a NPE exception which could occur when joining four tables with a join
  condition which referred to fields from the leftmost relation.

- Fix a problem that caused ``WITHIN`` queries to return no or incorrect
  results.

- Fixed an issue where internal cluster state updates could reset the active
  ingestion rules, causing all ingest operations to stop.

- Fix the problem that ``stats.breaker.*`` settings were not applied to the
  correct circuit breaker.

- Fixed an issue that caused an error ``Primary key value must not be NULL``
  to be thrown when trying to insert rows in a table that has a generated
  column which is used both in ``PARTITION_BY`` and ``PRIMARY KEY``.

- The postgres wire protocol service can now be bound to IPv6 addresses as
  documented.